dbeaver/pro#7009: add grouping percent column no button